<?xml version="1.0"?>
<package>
  <name>serial_collect</name>
  <version>1.2.1</version>
  <description>
    Serial is a cross-platform, simple to use library for using serial ports on computers.  This library provides a C++, object oriented interface for interacting with RS-232 like devices on Linux and Windows.
  </description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>MIT</license>

  <url type="website">http://wjwwood.github.com/serial/</url>
  <url type="repository">https://github.com/wjwwood/serial</url>
  <url type="bugtracker">https://github.com/wjwwood/serial/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="ash.gti@gmail.com">John Harrison</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>serial</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>tof_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>tof_ros</run_depend>

  <test_depend>boost</test_depend>

</package>
